[project]
name = "lume"
version = "0.1.0"
description = "All-in-one local LLM gateway: chat, threads, attachments, voice, tools."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "python-multipart>=0.0.12",
    "sse-starlette>=2.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "magic-html>=0.1",
    "pypdf>=5.1",
    "pillow>=11.0",
]

[project.optional-dependencies]
voice = [
    "supertonic>=1.3",
    "openai-whisper>=20240930",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lume"]